syntax.output
State 27 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | LC error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: Def DefList
   37        | %empty

   38 Def: Specifier DecList SEMI
   39    | error SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT
   62    | Exp LB error RB

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 39 62
INT (258) 18 60
FLOAT (259) 61
TYPE (260) 10
ID (261) 14 16 17 19 20 55 56 58 59
STRUCT (262) 12 13
RETURN (263) 31
IF (264) 32 33
ELSE (265) 33
WHILE (266) 34
SEMI (267) 4 5 7 29 31 35 38 39
COMMA (268) 9 22 41 63
ASSIGNOP (269) 43 44
RELOP (270) 47
PLUS (271) 48
MINUS (272) 49 53
STAR (273) 50
AND (274) 45
DIV (275) 51
OR (276) 46
DOT (277) 58
NOT (278) 54
LP (279) 19 20 32 33 34 52 55 56
RP (280) 19 20 21 32 33 34 52 55 56
LB (281) 18 57 62
RB (282) 18 57 62
LC (283) 12 25 26
RC (284) 12 25 26


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
Program (31)
    on left: 1, on right: 0
ExtDefList (32)
    on left: 2 3, on right: 1 2
ExtDef (33)
    on left: 4 5 6 7, on right: 2
ExtDecList (34)
    on left: 8 9, on right: 4 9
Specifier (35)
    on left: 10 11, on right: 4 5 6 24 38
StructSpecifier (36)
    on left: 12 13, on right: 11
OptTag (37)
    on left: 14 15, on right: 12
Tag (38)
    on left: 16, on right: 13
VarDec (39)
    on left: 17 18, on right: 8 9 18 24 42 43
FunDec (40)
    on left: 19 20 21, on right: 6
VarList (41)
    on left: 22 23, on right: 19 22
ParamDec (42)
    on left: 24, on right: 22 23
CompSt (43)
    on left: 25 26, on right: 6 30
StmtList (44)
    on left: 27 28, on right: 25 27
Stmt (45)
    on left: 29 30 31 32 33 34 35, on right: 27 32 33 34
DefList (46)
    on left: 36 37, on right: 12 25 36
Def (47)
    on left: 38 39, on right: 36
DecList (48)
    on left: 40 41, on right: 38 41
Dec (49)
    on left: 42 43, on right: 40 41
Exp (50)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62, on right: 29 31 32 33 34 43 44 45 46 47 48 49 50 51 52 53 54
    57 58 62 63 64
Args (51)
    on left: 63 64, on right: 55 63


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 37 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


State 23

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 33

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 27

   25 CompSt: LC . DefList StmtList RC
   26       | LC . error RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   39 Def: error . SEMI

    SEMI  shift, and go to state 42


State 30

   38 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 32

   36 DefList: Def . DefList

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 32


State 33

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 34

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


State 35

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 23 (VarList)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


State 40

   26 CompSt: LC error . RC
   39 Def: error . SEMI

    SEMI  shift, and go to state 42
    RC    shift, and go to state 52


State 41

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 42

   39 Def: error SEMI .

    $default  reduce using rule 39 (Def)


State 43

   18 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 26

    $default  reduce using rule 42 (Dec)


State 44

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 45

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 40 (DecList)


State 46

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 47

   36 DefList: Def DefList .

    $default  reduce using rule 36 (DefList)


State 48

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 24 (ParamDec)


State 49

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 50

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 70
    ParamDec         go to state 36


State 51

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 52

   26 CompSt: LC error RC .

    $default  reduce using rule 26 (CompSt)


State 53

   35 Stmt: error . SEMI

    SEMI  shift, and go to state 71


State 54

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 55

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 56

   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 59 (Exp)


State 57

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 73


State 58

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


State 59

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 75


State 60

   53 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 76


State 61

   54 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 77


State 62

   52 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 78


State 63

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 64

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 65

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    MINUS   shift, and go to state 60
    NOT     shift, and go to state 61
    LP      shift, and go to state 62
    LC      shift, and go to state 27

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 80
    Stmt      go to state 65
    Exp       go to state 66


State 66

   29 Stmt: Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62    | Exp . LB error RB

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    AND       shift, and go to state 87
    DIV       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 67

   43 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 92


State 68

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


State 69

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 43
    DecList  go to state 93
    Dec      go to state 45


State 70

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 71

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 72

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


State 73

   31 Stmt: RETURN Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62    | Exp . LB error RB

    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    AND       shift, and go to state 87
    DIV       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 74

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 98


State 75

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 60
    NOT    shift, and go to state 61
    LP     shift, and go to state 62

    Exp  go to state 99


State 76

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   53    | MINUS Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62    | Exp . LB error RB

    STAR  shift, and go to state 86
    DIV   shift, and go to state 88
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 53 (Exp)


State 77

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   54    | NOT Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    AND       shift, and go to state 87
    DIV       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91

    $default  reduce using rule 54 (Exp)


State 78

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   52    | LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   62    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    AND       shift, and go to state 87
    DIV       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 100
    LB        shift, and go to state 91


State 79

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 80

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 81

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 82

   44 Exp: Exp ASSIGNOP . Exp
